--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/tables2.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/tables2.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en">
-
+<html lang="ko"xmlns:th="http://www.thymeleaf.org">
 	<head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -29,7 +28,10 @@
 
 		<!-- Bootstrap font icons css -->
 		<link rel="stylesheet" href="ddm/templates/max/design/assets/fonts/bootstrap/bootstrap-icons.css">
-
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	
 		<!-- Main css -->
 		<link rel="stylesheet" href="ddm/templates/max/design/assets/css/main.min.css">
 
@@ -40,10 +42,169 @@
 
 		<!-- Scrollbar CSS -->
 		<link rel="stylesheet" href="ddm/templates/max/design/assets/vendor/overlay-scroll/OverlayScrollbars.min.css">
+		
+		<!-- datetimepicker -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+		<script src="ddm/templates/max/design/assets/js/jquery.min.js"></script>
+		<link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
 
+		<script>
+			window.addEventListener('load', function() {
+				$("#snStart,#snEnd").datetimepicker({
+					timepicker:false,
+					format: 'Y-m-d'
+				});
+			});
+
+			jQuery.datetimepicker.setLocale('kr');
+			
+		</script>
+
+<!--		<script type="text/javascript">
+			$(function(){
+				var chkObj = document.getElementsByName("RowCheck");
+				var rowCnt = chkObj.length;
+				$("input[name='allCheck']").click(function(){
+					var chk_listArr = $("input[name = 'RowCheck']");
+					for(var i = 0; i < chk_listArr.length; i++){
+						chk_listArr[i].checked = this.checked;
+					}
+				});
+				$("input[name = 'RowCheck']").click(function(){
+					if($("input[name = 'RowCheck']:checked").length == rowCnt){
+						$("input[name = 'allCheck']")[0].checked = true;
+					}else{
+						$("input[name='allCheck']")[0].checked = false;
+					}
+				});
+			});
+			
+			
+			function checkSelectAll()  {
+			// 전체 체크박스
+			const checkboxes 
+				= document.querySelectorAll('input[name="animal"]');
+			// 선택된 체크박스
+			const checked 
+				= document.querySelectorAll('input[name="animal"]:checked');
+			// select all 체크박스
+			const selectAll 
+				= document.querySelector('input[name="selectall"]');
+			
+			if(checkboxes.length === checked.length)  {
+				selectAll.checked = true;
+			}else {
+				selectAll.checked = false;
+			}
+
+			}
+
+			function selectAll(selectAll)  {
+				const checkboxes 
+					= document.getElementsByName('animal');
+				
+				checkboxes.forEach((checkbox) => {
+					checkbox.checked = selectAll.checked
+				})
+			}
+			
+			 function deleteValue(){
+		        var url = "delete"; //컨트롤러로 보내고자 하는 URL
+		        var valueArr = new Array();
+		        var list = $("input[name='RowCheck']");
+		        
+		        for(var i = 0; i < list.length; i++){
+					if(list[i].checked){ // 선택되어 있으면 배열에 값을 저장함
+						valueArr.push(list[i].value);
+					}
+				}
+				
+				if(valueArr.length == 0){
+					alert("선택된 항목이 없습니다.");
+					
+				}else{
+					var chk = confirm("정말 삭제하시겠습니까?");
+					$.ajax({
+						url : url, // 전송 url
+						type : 'post', // post 방식
+						traditional : true, 
+						data:{
+							valueArr : valueArr //보내고자 하는 data 변수 설정
+						},
+						success:function(jdata){
+							if(jdata = 1){
+								alert("삭제 성공");
+							}else{
+								alert("삭제 실패");
+							}
+						}
+					});
+				}
+				
+		    }
+		</script>-->
 	</head>
 
 	<body>
+		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+		aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="exampleModalLabel">
+							삭제
+						</h5>
+						<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">삭제하시겠습니까?</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-primary">
+							예
+						</button>
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+							아니요
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+
+				<div class="modal-content">
+					<div class="modal-header">
+					<h1 class="modal-title fs-5" id="exampleModalLabel">데이터 추가</h1>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+
+				<div class="modal-body">
+					추가하시겠습니까?
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-primary">추가</button>
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+				</div>
+
+				</div>
+
+			</div>
+
+		</div>
+		<!-- Loading wrapper start -->
+		<!-- <div id="loading-wrapper">
+			<div class="spinner">
+                <div class="line1"></div>
+				<div class="line2"></div>
+				<div class="line3"></div>
+				<div class="line4"></div>
+				<div class="line5"></div>
+				<div class="line6"></div>
+            </div>
+		</div> -->
+		<!-- Loading wrapper end -->
+
 		<!-- Page wrapper start -->
 		<div class="page-wrapper">
 
@@ -53,7 +214,7 @@
 				<!-- Sidebar brand starts -->
 				<div class="sidebar-brand">
 					<a href="index.html" class="logo">
-						<img src="assets/images/logo.svg" alt="Max Admin Dashboard" />
+						<img src="ddm/templates/max/design/assets/images/logo.svg" alt="Max Admin Dashboard" />
 					</a>
 				</div>
 				<!-- Sidebar brand starts -->
@@ -239,7 +400,7 @@
 									</ul>
 								</div>
 							</li>
-							<li class="sidebar-dropdown active">
+							<li class="sidebar-dropdown">
 								<a href="#">
 									<i class="bi bi-columns-gap"></i>
 									<span class="menu-text">Forms</span>
@@ -271,7 +432,7 @@
 											<a href="summernote.html">Summernote</a>
 										</li>
 										<li>
-											<a href="form-layout1.html" class="current-page">Form Layout</a>
+											<a href="form-layout1.html">Form Layout</a>
 										</li>
 										<li>
 											<a href="form-layout2.html">Form Layout 2</a>
@@ -288,7 +449,7 @@
 									</ul>
 								</div>
 							</li>
-							<li class="sidebar-dropdown">
+							<li class="sidebar-dropdown active">
 								<a href="#">
 									<i class="bi bi-window-split"></i>
 									<span class="menu-text">Tables</span>
@@ -296,7 +457,7 @@
 								<div class="sidebar-submenu">
 									<ul>
 										<li>
-											<a href="tables.html">Tables</a>
+											<a href="tables.html" class="current-page">Tables</a>
 										</li>
 										<li>
 											<a href="data-tables.html">Data Tables</a>
@@ -402,7 +563,7 @@
 						<li class="breadcrumb-item">
 							<i class="bi bi-house"></i>
 						</li>
-						<li class="breadcrumb-item breadcrumb-active" aria-current="page">Form Layout</li>
+						<li class="breadcrumb-item breadcrumb-active" aria-current="page">Tables</li>
 					</ol>
 					<!-- Breadcrumb end -->
 
@@ -523,57 +684,168 @@
 					<div class="content-wrapper">
 
 						<!-- Row start -->
-						<div class="row gx-3">
-							<div class="col-sm-12 col-12">
-
-								<!-- Card start -->
-								<div class="card">
-									<div class="card-header">
-										<div class="card-title">Form Layout</div>
-									</div>
-									<div class="card-body">
-											<form action = "codeInsert" method="post">
-
-										<!-- Row start -->
-										<div class="row gx-3" style="margin-bottom: 30px;">
-											<div class="col-sm-6 col-12">
-												<div class="was-validated">
-													<label for="validationCustom01" class="form-label">codeGroup_seq</label>
-													<input type="text" class="form-control" id="validationCustom01" value="" required=""
-													name = "codeGroup_seq">
-												</div>
-											</div>
-											<div class="col-sm-6 col-12">
-												<div class="was-validated">
-													<label for="validationCustom01" class="form-label">name</label>
-													<input type="text" class="form-control" id="validationCustom01" value="" required=""
-													name = "name">
-												</div>
-											</div>
-											
-										</div>
-										
-										<!-- Form actions footer start -->
-										<div class="form-actions-footer">
-												<button class="btn btn-light"><a th:href="@{codeXdmList}" th:text="뒤로"></a></button>
-
-												<button class="btn btn-success submit" data-bs-toggle="modal"
-												data-bs-target="#exampleModal2 ">데이터 추가</button>
-											
-										</div>
-										<!-- Form actions footer end -->
-										</form>
-
-									</div>
-								</div>
-								<!-- Card end -->
+						<!-- Card start -->
+						<div class="card">
+							<div class="card-header">
+								<div class="card-title">회원관리</div>
 
 							</div>
+							<div class="card-body">
+						
+										<!-- search s -->
+										<div id="divSearch" class="container-fluid px-0 pb-3">
+											<div class="row row-cols-2 row-cols-sm-6 g-2 px-2">
+												<div class="col">
+													<select id="shDelNy" name="shDelNy" class="form-select form-select-sm">
+														<option value="">탈퇴여부</option>
+														<option value="1">Y</option>
+														<option value="0">N</option>            
+													</select>
+												</div>		
+												<div class="col">
+													<select id="shOptionDate" name="shOptionDate" class="form-select form-select-sm">
+														<option value="" >날짜</option>
+														<option value="1" >등록일</option>
+														<option value="2" >수정일</option>
+													</select>
+												</div>  
+												<div class="col">
+													<div class="input-group">
+														
+														<input type="text" id="snStart" name="snStart" placeholder="시작일" class="form-control form-control-sm" style="height: 35px"  autocomplete="off" readonly>
+													</div>
+												</div>              
+												<div class="col">
+													<input type="text" id="snEnd" name="snEnd" placeholder="종료일" class="form-control form-control-sm" style="height: 35px"  autocomplete="off" readonly>
+												</div> 
+											</div>
+											<div class="row row-cols-2 row-cols-sm-6 g-2 mt-1 px-2">
+												<div class="col">
+													<select id="shOption" name="shOption" class="form-select form-select-sm">
+														<option value="" >검색구분</option>
+														<option value="1" >코드</option>
+														<option value="2" >이름</option>
+														<option value="3" >아이디</option>
+														<option value="4" >이메일</option>
+														<option value="5" >모바일</option>				
+													</select>
+												</div>                    
+												<div class="col">
+													<input type="text" id="shValue" name="shValue" onkeyup="enterkey()" placeholder="검색어" class="form-control form-control-sm">
+													<div class="invalid-feedback" id="shValueFeedback"></div>
+												</div> 
+												<div class="col">
+													<button type="button" id="btnSearch" class="btn btn-outline-dark btn-sm">
+														<i class="bi bi-search"></i></i></button>
+													<button type="button" id="btnReset" class="btn btn-outline-dark btn-sm">
+														<i class="bi bi-arrow-clockwise"></i></i></button>
+												</div>    
+											</div>
+										</div>
+										<!-- search e -->
+										<div class = "row g-2 px-2">
+											<div class = "col-sm-1" align="left" style="margin-top: 15px;">
+												<label>Total : 5</label>
+											</div>
+											<div class = "col-sm-10"></div>
+											<div class = "col-sm-1" align="right" style="margin-bottom: 15px;">
+												<select class="form-select" required="">
+												<option selected = "">5</option>
+												<option>10</option>
+												<option>15</option>
+												</select>
+											</div>
+										</div>
+								<div class="table-responsive">
+									<table >
+										<table id="" class="table custom-table">
+											<thead>
+												<tr>
+													<th><input type='checkbox'
+														id = "allCheck"
+														name='allCheck' /></th>
+													<th>코드seq</th>
+													<th>코드이름</th>
+													<th>delYn</th>
+													<th>insertDate</th>
+												</tr>
+											</thead>
+											<tbody>
+												<c:forEach items = ${list} var = "list">
+												<tr th:if="${#lists.isEmpty(List)}" th:each="list : ${list}">
+													<th><input type='checkbox'
+														name='RowCheck' 
+														th:value='${list.seq}'/></th>
+													<td th:text="${list.seq}">
+<!--														<a th:href="@{/codeGroupDelForm(seq=${list.seq},name=${list.name})}" th:text="${list.seq}"></a>-->
+													</td>
+													<td>
+														<a th:href="@{/codeForm(seq=${list.seq},name=${list.name})}" th:text="${list.name}"></a>
+													</td>
+													<td th:if="${list.delYn eq 1}">Y</td>
+    												<td th:unless="${list.delYn eq 1}">N</td>
+													<td th:text="${#dates.format(list.insertDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+													</td>
+												</tr>
+												</c:forEach>
+											</tbody>
+										</table>
+								</div>
+								<!-- 페이지네이션 -->
+							<div class = "row">
+								<nav aria-label="Page navigation example">
+									<ul class="pagination justify-content-center" >
+										<li class="page-item disabled" style = "--pagination-hover-border-color : white;" >
+											<a class="page-link" href="#"><i class="bi bi-chevron-left"></i></a>
+										</li>
+										<li class="page-item"><a class="page-link" href="#">41</a></li>
+										<li class="page-item"><a class="page-link" href="#">42</a></li>
+										<li class="page-item"><a class="page-link" href="#">43</a></li>
+										<li class="page-item"><a class="page-link" href="#">44</a></li>
+										<li class="page-item"><a class="page-link" href="#">45</a></li>
+										<li class="page-item">
+											<a class="page-link" href="#"><i class="bi bi-chevron-right"></i></a>
+										</li>
+									</ul>
+									</nav>
+							</div>
+								<div class = "row">
+									<div class = "col-sm-1">
+<!--										<button type="button" class="btn btn-danger" onclick="deleteValue();" th:text="삭제"></a>-->
+										<button type="button" class="btn btn-danger"><a th:href="@{codeDelForm}" th:text="삭제"></a>
+											
+										</button>
+									</div>
+								
 
+									
+								<div class = "col-sm-10"> </div>
+									<div class = "col-sm-1">
+										<button class="btn btn-success" type="button"><a th:href="@{codeView}" th:text="추가"></a></button>
+									
+									</div>
+								</div>
+							</div>
+							
+							<br>
+							
 						</div>
+
+						<!-- Card end -->
+
+							
+
+											
+
+									</div>
+										
+								</div>
+							</div>
+
 						<!-- Row end -->
 
-					</div>
+						</div>
+
 					<!-- Content wrapper end -->
 
 					<!-- App Footer start -->
@@ -597,7 +869,6 @@
 			************ Required JavaScript Files *************
 		************* -->
 		<!-- Required jQuery first, then Bootstrap Bundle JS -->
-		<script src="ddm/templates/max/design/assets/js/jquery.min.js"></script>
 		<script src="ddm/templates/max/design/assets/js/bootstrap.bundle.min.js"></script>
 		<script src="ddm/templates/max/design/assets/js/modernizr.js"></script>
 		<script src="ddm/templates/max/design/assets/js/moment.js"></script>
@@ -609,6 +880,14 @@
 		<!-- Overlay Scroll JS -->
 		<script src="ddm/templates/max/design/assets/vendor/overlay-scroll/jquery.overlayScrollbars.min.js"></script>
 		<script src="ddm/templates/max/design/assets/vendor/overlay-scroll/custom-scrollbar.js"></script>
+
+		<!-- Custom Data tables -->
+		<script src="ddm/templates/max/design/assets/vendor/datatables/custom/custom-datatables.js"></script>
+
+		
+		<!-- Data Tables -->
+		<script src="ddm/templates/max/design/assets/vendor/datatables/dataTables.min.js"></script>
+		<script src="ddm/templates/max/design/assets/vendor/datatables/dataTables.bootstrap.min.js"></script>
 
 		<!-- Main Js Required -->
 		<script src="ddm/templates/max/design/assets/js/main.js"></script>
