--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout6.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/form-layout6.html
@@ -532,33 +532,36 @@
 										<div class="card-title">Form Layout</div>
 									</div>
 									<div class="card-body">
-											<form action = "codeInsert" method="post">
+										<form action = "codeUpdt" method="post">
 
 										<!-- Row start -->
 										<div class="row gx-3" style="margin-bottom: 30px;">
 											<div class="col-sm-6 col-12">
-												<div class="was-validated">
-													<label for="validationCustom01" class="form-label">codeGroup_seq</label>
-													<input type="text" class="form-control" id="validationCustom01" value="" required=""
-													name = "codeGroup_seq">
-												</div>
+													<label for="validationCustom01" class="form-label">seq</label>
+													<input type="text" class="form-control"
+													th:value="${item.seq}" required=""
+													name = "seq">
 											</div>
 											<div class="col-sm-6 col-12">
-												<div class="was-validated">
 													<label for="validationCustom01" class="form-label">name</label>
-													<input type="text" class="form-control" id="validationCustom01" value="" required=""
-													name = "name">
-												</div>
+													<input type="text" class="form-control" th:value="${item.name}" required=""
+													name = "name" >
 											</div>
 											
 										</div>
-										
 										<!-- Form actions footer start -->
-										<div class="form-actions-footer">
+										<div class="form-actions-footer" >
+											<div class="col gy-2">
 												<button class="btn btn-light"><a th:href="@{codeXdmList}" th:text="뒤로"></a></button>
-
-												<button class="btn btn-success submit" data-bs-toggle="modal"
-												data-bs-target="#exampleModal2 ">데이터 추가</button>
+											</div>
+											<div class="col gy-2" align="right">
+												<button type="submit" class="btn btn-primary" onclick="javascript: form.action='codeDelete';">데이터 삭제</button>
+												<button type="submit" class="btn btn-primary" onclick="javascript: form.action='codeUpdtDel';">N,Y수정</button>
+												<button type="submit" class="btn btn-primary" onclick="javascript: form.action='codeUpdt';">저장</button>
+											</div>
+<!--												<button class="btn btn-light"><a th:href="@{codeGroupDelete}" th:text="삭제"></a></button>-->
+<!--												<button class="btn btn-success submit" data-bs-toggle="modal"-->
+<!--												data-bs-target="#exampleModal2 ">데이터 수정</button>-->
 											
 										</div>
 										<!-- Form actions footer end -->
