--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/tables.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/tables.html
@@ -49,17 +49,17 @@
 		<link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
 
-		<script>
-			window.addEventListener('load', function() {
-				$("#snStart,#snEnd").datetimepicker({
-					timepicker:false,
-					format: 'Y-m-d'
-				});
-			});
+<!--		<script>-->
+<!--			window.addEventListener('load', function() {-->
+<!--				$("#snStart,#snEnd").datetimepicker({-->
+<!--					timepicker:false,-->
+<!--					format: 'Y-m-d'-->
+<!--				});-->
+<!--			});-->
 
-			jQuery.datetimepicker.setLocale('kr');
+<!--			jQuery.datetimepicker.setLocale('kr');-->
 			
-		</script>
+<!--		</script>-->
 
 <!--		<script type="text/javascript">
 			$(function(){
@@ -144,6 +144,41 @@
 				
 		    }
 		</script>-->
+		
+		<script type="text/javascript">
+		
+			window.addEventListener('load', function() {
+					$("#shDateStart, #shDateEnd").datepicker();
+			});
+			
+			let goUrlXdmList = "/v1/infra/codegroup/codeGroupXdmList";								/* ### */
+			let goUrlXdmForm = "/v1/infra/codegroup/codeGroupForm";								/* ### */
+			let goUrlXdmMultiUele = "/v1/infra/codegroup/codeGroupXdmMultiUele";			/* ### */
+			let goUrlXdmMultiDele = "/v1/infra/codegroup/codeGroupXdmMultiDele";			/* ### */
+			let goUrlXdmView = "/v1/infra/codegroup/codeGroupView";								/* ### */
+			
+			let seq = document.querySelector("input[name=ifcgSeq]");									/* ### */
+		
+			document.getElementById("btnReset").onclick = function () {
+			    location.href = goUrlXdmList;
+			}
+		
+		
+			document.getElementById("btnForm").onclick = function () {
+			    goForm(0);
+			}
+		
+		
+			goForm = function (keyValue) {
+			    seq.value = keyValue;
+			    form.action = goUrlXdmForm;
+			    form.submit();
+			}
+			document.getElementById("btnSearch").onclick = function () {
+			    form.action = goUrlXdmList;
+			    form.submit();
+			};
+		</script>
 	</head>
 
 	<body>
@@ -691,58 +726,62 @@
 
 							</div>
 							<div class="card-body">
-						
+						<form name="btnForm" id="btnForm" method="post" autocomplete="off">
 										<!-- search s -->
 										<div id="divSearch" class="container-fluid px-0 pb-3">
 											<div class="row row-cols-2 row-cols-sm-6 g-2 px-2">
 												<div class="col">
-													<select id="shDelNy" name="shDelNy" class="form-select form-select-sm">
-														<option value="">탈퇴여부</option>
-														<option value="1">Y</option>
-														<option value="0">N</option>            
+													<select id="delYn" name="delYn" class="form-select form-select-sm">
+														<option value=""  th:selected="${vo.delYn == null}">탈퇴여부</option>
+														<option value="1" th:selected="${vo.delYn == 1}">Y</option>
+														<option value="0" th:selected="${vo.delYn == 0}">N</option>            
 													</select>
-												</div>		
+												</div>
+<!--												<div class="col">-->
+<!--													<select class="form-select" name="shUseNy" id="shUseNy">-->
+<!--														<option value="" th:selected="${vo.shUseNy == null}">사용여부</option>-->
+<!--														<option value="1" th:selected="${vo.shUseNy == 1}">Y</option>-->
+<!--														<option value="0" th:selected="${vo.shUseNy == 0}">N</option>-->
+<!--													</select>-->
+<!--												</div>				-->
 												<div class="col">
 													<select id="shOptionDate" name="shOptionDate" class="form-select form-select-sm">
-														<option value="" >날짜</option>
-														<option value="1" >등록일</option>
-														<option value="2" >수정일</option>
+														<option value="" th:selected="${vo.shOptionDate == null}">날짜</option>
+														<option value="1" th:selected="${vo.shOptionDate == 1}">등록일</option>
+														<option value="2" th:selected="${vo.shOptionDate == 2}">수정일</option>
 													</select>
 												</div>  
 												<div class="col">
-													<div class="input-group">
+												<div class="input-group">
 														
-														<input type="text" id="snStart" name="snStart" placeholder="시작일" class="form-control form-control-sm" style="height: 35px"  autocomplete="off" readonly>
-													</div>
+													<input type="text" id="shDateStart" name="shDateStart" th:value="${#strings.substring(vo.shDateStart, 0, 10)}" placeholder="시작일" class="form-control form-control-sm" autocomplete="off">													</div>
 												</div>              
 												<div class="col">
-													<input type="text" id="snEnd" name="snEnd" placeholder="종료일" class="form-control form-control-sm" style="height: 35px"  autocomplete="off" readonly>
-												</div> 
+													<input type="text" id="shDateEnd" name="shDateEnd" th:value="${#strings.substring(vo.shDateEnd, 0, 10)}" placeholder="종료일" class="form-control form-control-sm" autocomplete="off">												</div> 
 											</div>
 											<div class="row row-cols-2 row-cols-sm-6 g-2 mt-1 px-2">
 												<div class="col">
 													<select id="shOption" name="shOption" class="form-select form-select-sm">
 														<option value="" >검색구분</option>
-														<option value="1" >코드</option>
-														<option value="2" >이름</option>
-														<option value="3" >아이디</option>
-														<option value="4" >이메일</option>
-														<option value="5" >모바일</option>				
-													</select>
+														<option value="" th:selected="${vo.shOption == null}">검색구분</option>
+														<option value="1" th:selected="${vo.shOption == 1}">코드그룹 코드</option>
+														<option value="2" th:selected="${vo.shOption == 2}">코드그룹 이름</option>
+<!--														<option value="3" th:selected="${vo.shOption == 3}">코드그룹 이름 (영문)</option>		
+-->													</select>
 												</div>                    
 												<div class="col">
-													<input type="text" id="shValue" name="shValue" onkeyup="enterkey()" placeholder="검색어" class="form-control form-control-sm">
+													<input type="text" id="shValue" name="shValue" th:value="${vo.shValue}" onkeyup="enterkey()" placeholder="검색어" class="form-control form-control-sm">
 													<div class="invalid-feedback" id="shValueFeedback"></div>
 												</div> 
 												<div class="col">
-													<button type="button" id="btnSearch" class="btn btn-outline-dark btn-sm">
-														<i class="bi bi-search"></i></i></button>
-													<button type="button" id="btnReset" class="btn btn-outline-dark btn-sm">
-														<i class="bi bi-arrow-clockwise"></i></i></button>
+													<button type="button" id="btnSearch" class="btn btn-outline-secondary btn-sm btn_custom"><i class="fa-solid fa-magnifying-glass fa-lg"></i></button>
+													<button type="button" id="btnReset" class="btn btn-outline-secondary btn-sm btn_custom"><i class="fa-solid fa-rotate-right fa-lg"></i></button>
 												</div>    
 											</div>
 										</div>
 										<!-- search e -->
+										</form>
+
 										<div class = "row g-2 px-2">
 											<div class = "col-sm-1" align="left" style="margin-top: 15px;">
 												<label>Total : 5</label>
@@ -757,7 +796,6 @@
 											</div>
 										</div>
 								<div class="table-responsive">
-									<table >
 										<table id="" class="table custom-table">
 											<thead>
 												<tr>
@@ -792,6 +830,7 @@
 												</c:forEach>
 											</tbody>
 										</table>
+										</div>
 								</div>
 								<!-- 페이지네이션 -->
 							<div class = "row">
