update html codeGroupView codeGroupForm and function

--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/tables2.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/tables2.html
@@ -757,7 +757,7 @@
 											</div>
 										</div>
 								<div class="table-responsive">
-									<table >
+<!--									<table >-->
 										<table id="" class="table custom-table">
 											<thead>
 												<tr>
