--- a/svt/src/main/resources/templates/xdm/v1/infra/ddm/tables.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/ddm/tables.html
@@ -49,17 +49,17 @@
 		<link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
 
-<!--		<script>-->
-<!--			window.addEventListener('load', function() {-->
-<!--				$("#snStart,#snEnd").datetimepicker({-->
-<!--					timepicker:false,-->
-<!--					format: 'Y-m-d'-->
-<!--				});-->
-<!--			});-->
+		<script>
+			window.addEventListener('load', function() {
+				$("#shDateStart,#shDateEnd").datetimepicker({
+					timepicker:false,
+					format: 'Y-m-d'
+				});
+			});
 
-<!--			jQuery.datetimepicker.setLocale('kr');-->
+			jQuery.datetimepicker.setLocale('kr');
 			
-<!--		</script>-->
+<!--		</script>
 
 <!--		<script type="text/javascript">
 			$(function(){
@@ -145,40 +145,7 @@
 		    }
 		</script>-->
 		
-		<script type="text/javascript">
-		
-			window.addEventListener('load', function() {
-					$("#shDateStart, #shDateEnd").datepicker();
-			});
-			
-			let goUrlXdmList = "/v1/infra/codegroup/codeGroupXdmList";								/* ### */
-			let goUrlXdmForm = "/v1/infra/codegroup/codeGroupForm";								/* ### */
-			let goUrlXdmMultiUele = "/v1/infra/codegroup/codeGroupXdmMultiUele";			/* ### */
-			let goUrlXdmMultiDele = "/v1/infra/codegroup/codeGroupXdmMultiDele";			/* ### */
-			let goUrlXdmView = "/v1/infra/codegroup/codeGroupView";								/* ### */
-			
-			let seq = document.querySelector("input[name=ifcgSeq]");									/* ### */
-		
-			document.getElementById("btnReset").onclick = function () {
-			    location.href = goUrlXdmList;
-			}
-		
-		
-			document.getElementById("btnForm").onclick = function () {
-			    goForm(0);
-			}
-		
-		
-			goForm = function (keyValue) {
-			    seq.value = keyValue;
-			    form.action = goUrlXdmForm;
-			    form.submit();
-			}
-			document.getElementById("btnSearch").onclick = function () {
-			    form.action = goUrlXdmList;
-			    form.submit();
-			};
-		</script>
+
 	</head>
 
 	<body>
@@ -726,7 +693,7 @@
 
 							</div>
 							<div class="card-body">
-						<form name="btnForm" id="btnForm" method="post" autocomplete="off">
+						<form name="formList" id="formList" method="post" autocomplete="off">
 										<!-- search s -->
 										<div id="divSearch" class="container-fluid px-0 pb-3">
 											<div class="row row-cols-2 row-cols-sm-6 g-2 px-2">
@@ -830,8 +797,7 @@
 												</c:forEach>
 											</tbody>
 										</table>
-										</div>
-								</div>
+									</div>
 								<!-- 페이지네이션 -->
 							<div class = "row">
 								<nav aria-label="Page navigation example">
@@ -932,7 +898,38 @@
 
 		<!-- Main Js Required -->
 		<script src="ddm/templates/max/design/assets/js/main.js"></script>
+		<script type="text/javascript">
+		
 
+			
+			let goUrlXdmList = "/tables";								/* ### */
+			let goUrlXdmForm = "/v1/infra/codegroup/codeGroupForm";								/* ### */
+     			let goUrlXdmMultiUele = "/v1/infra/codegroup/codeGroupXdmMultiUele";			/* ### */
+			let goUrlXdmMultiDele = "/v1/infra/codegroup/codeGroupXdmMultiDele";			/* ### */
+			let goUrlXdmView = "/codeGroupView";								/* ### */
+			
+			let seq = document.querySelector("input[name=Seq]");									/* ### */
+		
+			document.getElementById("btnReset").onclick = function () {
+			    location.href = goUrlXdmList;
+			}
+		
+
+		
+		
+			goForm = function (keyValue) {
+			    seq.value = keyValue;
+			    form.action = goUrlXdmForm;
+			    form.submit();
+			}
+			document.getElementById("btnSearch").onclick = function () {
+				let form = document.querySelector("form[name=formList]");
+			    form.action = goUrlXdmList;
+			    form.submit();
+			};
+			
+			
+		</script>
 	</body>
 
 </html>
