--- a/svt/src/main/resources/templates/xdm/v1/infra/codeGroup/codeGroupView.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/codeGroup/codeGroupView.html
@@ -656,10 +656,10 @@ function validationUpdt(){
 // 	alert("validationUpdt");
 // 	alert("name " + document.getElementById("name").value);
 
-	if(!nullToEmpty(document.getElementById("seq").value)){
-		document.getElementById("seq").setAttribute("class", "form-control is-invalid");
-		return false;
-	}
+// 	if(!nullToEmpty(document.getElementById("seq").value)){
+// 		document.getElementById("seq").setAttribute("class", "form-control is-invalid");
+// 		return false;
+// 	}
 	if(!nullToEmpty(document.getElementById("name").value)){
 		document.getElementById("name").setAttribute("class", "form-control is-invalid");
 		return false;
