--- a/svt/src/main/resources/templates/xdm/v1/infra/codeGroup/codeGroupXdmList.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/codeGroup/codeGroupXdmList.html
@@ -698,10 +698,10 @@
 								<form name="formList" id="formList" method="get" autocomplete="off">
 											<div class="row">
 											<div class="col-2 gy-2" style="padding-left: 2%;">
-												<select id="delYn" name="delYn" class="form-select form-select-sm">
-													<option value="" th:selected="${vo.delYn == null}">삭제여부</option>
-													<option value="1" th:selected="${vo.delYn == 1}">Y</option>
-													<option value="0" th:selected="${vo.delYn == 0}">N</option>
+												<select id="shDelNy" name="shDelNy" class="form-select form-select-sm">
+													<option value="" th:selected="${vo.shDelNy == null}">삭제여부</option>
+													<option value="1" th:selected="${vo.shDelNy == 1}">Y</option>
+													<option value="0" th:selected="${vo.shDelNy == 0}">N</option>
 												</select>
 														
 											</div>
@@ -718,13 +718,13 @@
 											<!-- datetimepicker data-->
 											<div class="col-2 gy-2 ">
 												<!-- datetimepicker -->
-<!-- 											<input type="text"id="shDateStart" name="shDateStart" th:value="${#strings.substring(vo.shDateStart, 0, 10)}" placeholder="시작일" class="datetimepicker form-control form-control-sm" autocomplete="off"> -->
-											<input type="text"id="shDateStart" name="shDateStart" placeholder="시작일" class="datetimepicker form-control form-control-sm" autocomplete="off">
+											<input type="text"id="shDateStart" name="shDateStart" th:value="${#strings.substring(vo.shDateStart, 0, 10)}" placeholder="시작일" class="datetimepicker form-control form-control-sm" autocomplete="off">
+<!-- 											<input type="text"id="shDateStart" name="shDateStart" placeholder="시작일" class="datetimepicker form-control form-control-sm" autocomplete="off"> -->
 											
 											</div>
 											<div class="col-2 gy-2">
-<!-- 												<input type="text" id="shDateEnd" name="shDateEnd" th:value="${#strings.substring(vo.shDateEnd, 0, 10)}" placeholder="종료일" class="datetimepicker form-control form-control-sm" autocomplete="off"> -->
-												<input type="text" id="shDateEnd" name="shDateEnd" placeholder="종료일" class="datetimepicker form-control form-control-sm" autocomplete="off">
+												<input type="text" id="shDateEnd" name="shDateEnd" th:value="${#strings.substring(vo.shDateEnd, 0, 10)}" placeholder="종료일" class="datetimepicker form-control form-control-sm" autocomplete="off">
+<!-- 												<input type="text" id="shDateEnd" name="shDateEnd" placeholder="종료일" class="datetimepicker form-control form-control-sm" autocomplete="off"> -->
 											</div>					
 										</div>
 										
@@ -771,7 +771,7 @@
 														name='allCheck' /></th>
 													<th>seq</th>
 													<th>코드name</th>
-													<th>delYn</th>
+													<th>delNy</th>
 													<th>insertDate</th>
 													<th>updateDate</th>
 												</tr>
@@ -789,10 +789,10 @@
 														<a th:href="@{/codeGroupForm(seq=${list.seq},name=${list.name})}" th:text="${list.name}"
 														name = "name" id = "name">></a>
 													</td>
-													<td th:if="${list.delYn eq 1}">Y</td>
-    												<td th:unless="${list.delYn eq 1}">N</td>
+													<td th:if="${list.delNy eq 1}">Y</td>
+    												<td th:unless="${list.delNy eq 1}">N</td>
 													<td th:text="${#dates.format(list.insertDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
-													<td th:text="${#dates.format(list.deleteDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+													<td th:text="${#dates.format(list.updateDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
 													</td>
 												</tr>
 												</c:forEach>
