--- a/svt/src/main/resources/templates/xdm/v1/infra/codeGroup/codeGroupForm.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/codeGroup/codeGroupForm.html
@@ -543,7 +543,7 @@
 													name = "seq">
 											</div>
 											<div class="col-sm-6 col-12">
-													<label for="validationCustom01" class="form-label">name</label>
+													<label for="ifmmName" class="form-label fs--1">name</label>
 													<input type="text" class="form-control" th:value="${item.name}" required=""
 													name = "name" >
 											</div>
@@ -616,38 +616,49 @@
 		<!-- Main Js Required -->
 		<script src="ddm/templates/max/design/assets/js/main.js"></script>
 
-<script>
-let form = document.querySelector("form[name=formList]");
-
-let goUrlXdmList = "/codeGroupXdmList";								/* ### */
-let goUrlXdmForm = "/codeGroupForm";								/* ### */
-	let goUrlXdmMultiUele = "/v1/infra/codegroup/codeGroupXdmMultiUele";			/* ### */
-let goUrlXdmMultiDele = "/v1/infra/codegroup/codeGroupXdmMultiDele";			/* ### */
-let goUrlXdmView = "/codeGroupView";								/* ### */
-
-
-document.getElementById("btnSubmit").onclick = function(){
-	if(seq.value == "0" || seq.value == ""){
-		form.action = goUrlXdmInst;
-		form.submit();
-	}else{
-		if(validationUpdt() == false) return false;
-		form.action = goUrlXdmUpdt;
-		form.submit();
-	}
-	
-}
-
-function validationInst(){
-	if(validationUpdt() == false) return false;
-	alert("validationInst");
-}
-
-function validationUpdt(){
-	alert("validationUpdt");
-}
-
-</script>
+		<script>
+		let form = document.querySelector("form[name=formList]");
+		
+		let goUrlXdmList = "/codeGroupXdmList";								/* ### */
+		let goUrlXdmForm = "/codeGroupForm";								/* ### */
+			let goUrlXdmMultiUele = "/v1/infra/codegroup/codeGroupXdmMultiUele";			/* ### */
+		let goUrlXdmMultiDele = "/v1/infra/codegroup/codeGroupXdmMultiDele";			/* ### */
+		let goUrlXdmView = "/codeGroupView";								/* ### */
+		
+		
+		document.getElementById("btnSubmit").onclick = function(){
+			if(seq.value == "0" || seq.value == ""){
+				form.action = goUrlXdmInst;
+				form.submit();
+			}else{
+				if(validationUpdt() == false) return false;
+				form.action = goUrlXdmUpdt;
+				form.submit();
+			}
+			
+		}
+		
+		function validationInst(){
+			if(validationUpdt() == false) return false;
+			alert("validationInst");
+		}
+		
+		function validationUpdt() {
+// 			if(!checkSelectNull('ifcgSeq', 2, "코드그룹을 선택해 주세요.")) return false;
+// 			if(!checkOnlyEnglishNumber('ifcdSeqAnother', 2, 1, "코드 (Another)는 영대소문자, 숫자만 입력 가능합니다.")) return false;
+			if(!checkOnlyKoreanEnglishNumber('ifcdName', 2, 0, "코드 이름은 한글, 영문대소문자, 숫자만 입력 가능합니다.")) return false;
+// 			if(!checkOnlyEnglishNumber('ifcdNameEng', 2, 1, "코드 이름 (영문)는 영대소문자, 숫자만 입력 가능합니다.")) return false;
+// 			if(!checkOnlyNumber('ifcdOrder', 2, 0, 1, 0, 255, "순서는 숫자(0~255)만 입력 가능합니다.")) return false;
+// 			if(!checkOnlyEnglishNumber('ifcdReferenceV1', 2, 1, "예비1 (varchar type)은 영문대소문자, 숫자만 입력 가능합니다.")) return false;
+// 			if(!checkOnlyEnglishNumber('ifcdReferenceV2', 2, 1, "예비2 (varchar type)은 영문대소문자, 숫자만 입력 가능합니다.")) return false;
+// 			if(!checkOnlyEnglishNumber('ifcdReferenceV3', 2, 1, "예비3 (varchar type)은 영문대소문자, 숫자만 입력 가능합니다.")) return false;
+// 			if(!checkOnlyEnglishNumber('ifcdReferenceV4', 2, 1, "예비4 (varchar type)은 영문대소문자, 숫자만 입력 가능합니다.")) return false;		
+// 			if(!checkOnlyNumber('ifcdReferenceI1', 2, 1, 1, -128, 127, "예비1 (Int type)은 숫자(-128~127)만 입력 가능합니다.")) return false;
+// 			if(!checkOnlyNumber('ifcdReferenceI2', 2, 1, 1, -128, 127, "예비2 (Int type)은 숫자(-128~127)만 입력 가능합니다.")) return false;
+// 			if(!checkOnlyNumber('ifcdReferenceI3', 2, 1, 1, -128, 127, "예비3 (Int type)은 숫자(-128~127)만 입력 가능합니다.")) return false;
+// 			if(!checkOnlyNumber('ifcdReferenceI4', 2, 1, 1, -128, 127, "예비4 (Int type)은 숫자(-128~127)만 입력 가능합니다.")) return false;
+		}
+		</script>
 	</body>
 
 </html>
