--- a/svt/src/main/resources/templates/xdm/v1/infra/code/codeView.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/code/codeView.html
@@ -537,19 +537,16 @@
 										<!-- Row start -->
 										<div class="row gx-3" style="margin-bottom: 30px;">
 											<div class="col-sm-6 col-12">
-												<div class="was-validated">
-													<label for="validationCustom01" class="form-label">codeGroup_seq</label>
-													<input type="text" class="form-control" id="validationCustom01" value="" required=""
-													name = "codeGroup_seq">
-												</div>
+													<label class="form-label">seq</label>
+													<input type="text" class="form-control " id="codegroup_seq" th:value="${item?.codegroup_seq}"value="" name = "codegroup_seq">
+													<div class="invalid-feedback" id="codegroup_seqFeedback"></div>
 											</div>
 											<div class="col-sm-6 col-12">
-												<div class="was-validated">
-													<label for="validationCustom01" class="form-label">name</label>
-													<input type="text" class="form-control" id="validationCustom01" value="" required=""
-													name = "name">
-												</div>
+													<label for="name" class="form-label fs--1">name<span class="text-danger fs-0">*</span></label>
+													<input type="text" class="form-control" id="name" th:value="${item?.name}" maxlength="20" placeholder="한글, 영대소문자, 숫자">
+													<div class="invalid-feedback" id="nameFeedback"></div>
 											</div>
+											
 											
 										</div>
 										
@@ -612,7 +609,86 @@
 
 		<!-- Main Js Required -->
 		<script src="ddm/templates/max/design/assets/js/main.js"></script>
-
+		<script src="usr/js/validationXdm.js"></script>
+		<script>
+		let form = document.querySelector("form[name=formList]");
+		
+		let goUrlXdmList = "/codeXdmList";								/* ### */
+		let goUrlXdmForm = "/codeForm";								/* ### */
+			let goUrlXdmMultiUele = "/v1/infra/code/codeXdmMultiUele";			/* ### */
+		let goUrlXdmMultiDele = "/v1/infra/code/codeXdmMultiDele";			/* ### */
+		let goUrlXdmView = "/codeView";								/* ### */
+		
+		let seq = document.querySelector("input[name=Seq]");									/* ### */
+		
+		
+		document.getElementById("btnSubmit").onclick = function(){
+			
+			if(validationInst() == false) return false;
+			else{
+				form.action = goUrlXdmUpdt;
+				form.submit();
+			}
+			
+			
+			
+			if(seq.value == "0" || seq.value == ""){
+				form.action = goUrlXdmInst;
+				form.submit();
+		
+			}else{
+				if(validationUpdt() == false) return false;
+				form.action = goUrlXdmUpdt;
+				form.submit();
+		
+			}
+			
+		}
+		
+		function validationInst(){
+			if(validationUpdt() == false) return false;
+		// 	alert("validationInst");
+		}
+		
+		function validationUpdt(){
+		// 	alert("validationUpdt");
+		// 	alert("name " + document.getElementById("name").value);
+		
+		// 	if(!nullToEmpty(document.getElementById("seq").value)){
+		// 		document.getElementById("seq").setAttribute("class", "form-control is-invalid");
+		// 		return false;
+		// 	}
+		// 	if(!nullToEmpty(document.getElementById("name").value)){
+		// 		document.getElementById("name").setAttribute("class", "form-control is-invalid");
+		// 		return false;
+		// 	}
+		
+// 					if(!checkSelectNull('codegroup_seq', 2, "코드그룹을 선택해 주세요.")) return false;
+		// 			if(!checkOnlyEnglishNumber('ifcdSeqAnother', 2, 1, "코드 (Another)는 영대소문자, 숫자만 입력 가능합니다.")) return false;
+// 					if(!checkOnlyKoreanEnglishNumber('name', 2, 0, "코드 이름은 한글, 영문대소문자, 숫자만 입력 가능합니다.")) return false;
+		// 			if(!checkOnlyEnglishNumber('ifcdNameEng', 2, 1, "코드 이름 (영문)는 영대소문자, 숫자만 입력 가능합니다.")) return false;
+		// 			if(!checkOnlyNumber('ifcdOrder', 2, 0, 1, 0, 255, "순서는 숫자(0~255)만 입력 가능합니다.")) return false;
+		// 			if(!checkOnlyEnglishNumber('ifcdReferenceV1', 2, 1, "예비1 (varchar type)은 영문대소문자, 숫자만 입력 가능합니다.")) return false;
+		// 			if(!checkOnlyEnglishNumber('ifcdReferenceV2', 2, 1, "예비2 (varchar type)은 영문대소문자, 숫자만 입력 가능합니다.")) return false;
+		// 			if(!checkOnlyEnglishNumber('ifcdReferenceV3', 2, 1, "예비3 (varchar type)은 영문대소문자, 숫자만 입력 가능합니다.")) return false;
+		// 			if(!checkOnlyEnglishNumber('ifcdReferenceV4', 2, 1, "예비4 (varchar type)은 영문대소문자, 숫자만 입력 가능합니다.")) return false;		
+		// 			if(!checkOnlyNumber('ifcdReferenceI1', 2, 1, 1, -128, 127, "예비1 (Int type)은 숫자(-128~127)만 입력 가능합니다.")) return false;
+		// 			if(!checkOnlyNumber('ifcdReferenceI2', 2, 1, 1, -128, 127, "예비2 (Int type)은 숫자(-128~127)만 입력 가능합니다.")) return false;
+		// 			if(!checkOnlyNumber('ifcdReferenceI3', 2, 1, 1, -128, 127, "예비3 (Int type)은 숫자(-128~127)만 입력 가능합니다.")) return false;
+		// 			if(!checkOnlyNumber('ifcdReferenceI4', 2, 1, 1, -128, 127, "예비4 (Int type)은 숫자(-128~127)만 입력 가능합니다.")) return false;
+		
+		}
+		nullToEmpty = function(value){
+			if(value == null || value == 'null' || value.length == 0){
+		// 		document.getElementById("seq").focus();
+				return false;
+			}else{
+				return true;
+			}
+		}
+		
+		
+		</script>
 	</body>
 
 </html>
