--- a/svt/src/main/resources/templates/xdm/v1/infra/codeGroup/codeGroupXdmList.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/codeGroup/codeGroupXdmList.html
@@ -1,153 +1,9 @@
 <!doctype html>
 <html lang="ko"xmlns:th="http://www.thymeleaf.org">
+
 	<head>
-		<!-- Required meta tags -->
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-		<!-- Meta -->
-		<meta name="description" content="Responsive Bootstrap Admin Dashboards">
-		<meta name="author" content="Bootstrap Gallery" />
-		<link rel="canonical" href="https://www.bootstrap.gallery/">
-		<meta property="og:url" content="https://www.bootstrap.gallery">
-		<meta property="og:title" content="Admin Templates - Dashboard Templates | Bootstrap Gallery">
-		<meta property="og:description" content="Marketplace for Bootstrap Admin Dashboards">
-		<meta property="og:type" content="Website">
-		<meta property="og:site_name" content="Bootstrap Gallery">
-		<link rel="shortcut icon" href="ddm/templates/max/design/assets/images/favicon.svg">
-
-		<!-- Title -->
-		<title>Best Admin Dashboards</title>
-
-		<!-- *************
-			************ Common Css Files *************
-		************ -->
-
-		<!-- Animated css -->
-		<link rel="stylesheet" href="ddm/templates/max/design/assets/css/animate.css">
-
-		<!-- Bootstrap font icons css -->
-		<link rel="stylesheet" href="ddm/templates/max/design/assets/fonts/bootstrap/bootstrap-icons.css">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	
-		<!-- Main css -->
-		<link rel="stylesheet" href="ddm/templates/max/design/assets/css/main.min.css">
-
-
-		<!-- *************
-			************ Vendor Css Files *************
-		************ -->
-
-		<!-- Scrollbar CSS -->
-		<link rel="stylesheet" href="ddm/templates/max/design/assets/vendor/overlay-scroll/OverlayScrollbars.min.css">
-		
-		<!-- datetimepicker -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
-		<script src="ddm/templates/max/design/assets/js/jquery.min.js"></script>
-		<link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
-
-		<script>
-			window.addEventListener('load', function() {
-				$("#shDateStart,#shDateEnd").datetimepicker({
-					timepicker:false,
-					format: 'Y-m-d'
-				});
-			});
-
-			jQuery.datetimepicker.setLocale('kr');
-			
-		</script>
-		
-		
-
-<!--		<script type="text/javascript">
-			$(function(){
-				var chkObj = document.getElementsByName("RowCheck");
-				var rowCnt = chkObj.length;
-				$("input[name='allCheck']").click(function(){
-					var chk_listArr = $("input[name = 'RowCheck']");
-					for(var i = 0; i < chk_listArr.length; i++){
-						chk_listArr[i].checked = this.checked;
-					}
-				});
-				$("input[name = 'RowCheck']").click(function(){
-					if($("input[name = 'RowCheck']:checked").length == rowCnt){
-						$("input[name = 'allCheck']")[0].checked = true;
-					}else{
-						$("input[name='allCheck']")[0].checked = false;
-					}
-				});
-			});
-			
-			
-			function checkSelectAll()  {
-			// 전체 체크박스
-			const checkboxes 
-				= document.querySelectorAll('input[name="animal"]');
-			// 선택된 체크박스
-			const checked 
-				= document.querySelectorAll('input[name="animal"]:checked');
-			// select all 체크박스
-			const selectAll 
-				= document.querySelector('input[name="selectall"]');
-			
-			if(checkboxes.length === checked.length)  {
-				selectAll.checked = true;
-			}else {
-				selectAll.checked = false;
-			}
-
-			}
-
-			function selectAll(selectAll)  {
-				const checkboxes 
-					= document.getElementsByName('animal');
-				
-				checkboxes.forEach((checkbox) => {
-					checkbox.checked = selectAll.checked
-				})
-			}
-			
-			 function deleteValue(){
-		        var url = "delete"; //컨트롤러로 보내고자 하는 URL
-		        var valueArr = new Array();
-		        var list = $("input[name='RowCheck']");
-		        
-		        for(var i = 0; i < list.length; i++){
-					if(list[i].checked){ // 선택되어 있으면 배열에 값을 저장함
-						valueArr.push(list[i].value);
-					}
-				}
-				
-				if(valueArr.length == 0){
-					alert("선택된 항목이 없습니다.");
-					
-				}else{
-					var chk = confirm("정말 삭제하시겠습니까?");
-					$.ajax({
-						url : url, // 전송 url
-						type : 'post', // post 방식
-						traditional : true, 
-						data:{
-							valueArr : valueArr //보내고자 하는 data 변수 설정
-						},
-						success:function(jdata){
-							if(jdata = 1){
-								alert("삭제 성공");
-							}else{
-								alert("삭제 실패");
-							}
-						}
-					});
-				}
-				
-		    }
-		</script>-->
-		
-
+		<div th:replace="~{xdm/v1/infra/include/head :: head}">
+		</div>
 	</head>
 
 	<body>
@@ -959,6 +815,103 @@
 			}
 			
 		</script>
+				<script>
+			window.addEventListener('load', function() {
+				$("#shDateStart,#shDateEnd").datetimepicker({
+					timepicker:false,
+					format: 'Y-m-d'
+				});
+			});
+
+			jQuery.datetimepicker.setLocale('kr');
+			
+		</script>
+		
+		
+
+<!--		<script type="text/javascript">
+			$(function(){
+				var chkObj = document.getElementsByName("RowCheck");
+				var rowCnt = chkObj.length;
+				$("input[name='allCheck']").click(function(){
+					var chk_listArr = $("input[name = 'RowCheck']");
+					for(var i = 0; i < chk_listArr.length; i++){
+						chk_listArr[i].checked = this.checked;
+					}
+				});
+				$("input[name = 'RowCheck']").click(function(){
+					if($("input[name = 'RowCheck']:checked").length == rowCnt){
+						$("input[name = 'allCheck']")[0].checked = true;
+					}else{
+						$("input[name='allCheck']")[0].checked = false;
+					}
+				});
+			});
+			
+			
+			function checkSelectAll()  {
+			// 전체 체크박스
+			const checkboxes 
+				= document.querySelectorAll('input[name="animal"]');
+			// 선택된 체크박스
+			const checked 
+				= document.querySelectorAll('input[name="animal"]:checked');
+			// select all 체크박스
+			const selectAll 
+				= document.querySelector('input[name="selectall"]');
+			
+			if(checkboxes.length === checked.length)  {
+				selectAll.checked = true;
+			}else {
+				selectAll.checked = false;
+			}
+
+			}
+
+			function selectAll(selectAll)  {
+				const checkboxes 
+					= document.getElementsByName('animal');
+				
+				checkboxes.forEach((checkbox) => {
+					checkbox.checked = selectAll.checked
+				})
+			}
+			
+			 function deleteValue(){
+		        var url = "delete"; //컨트롤러로 보내고자 하는 URL
+		        var valueArr = new Array();
+		        var list = $("input[name='RowCheck']");
+		        
+		        for(var i = 0; i < list.length; i++){
+					if(list[i].checked){ // 선택되어 있으면 배열에 값을 저장함
+						valueArr.push(list[i].value);
+					}
+				}
+				
+				if(valueArr.length == 0){
+					alert("선택된 항목이 없습니다.");
+					
+				}else{
+					var chk = confirm("정말 삭제하시겠습니까?");
+					$.ajax({
+						url : url, // 전송 url
+						type : 'post', // post 방식
+						traditional : true, 
+						data:{
+							valueArr : valueArr //보내고자 하는 data 변수 설정
+						},
+						success:function(jdata){
+							if(jdata = 1){
+								alert("삭제 성공");
+							}else{
+								alert("삭제 실패");
+							}
+						}
+					});
+				}
+				
+		    }
+		</script>-->
 	</body>
 
 </html>
