upload paging count print

--- a/svt/src/main/resources/templates/xdm/v1/infra/codeGroup/codeGroupXdmList.html
+++ b/svt/src/main/resources/templates/xdm/v1/infra/codeGroup/codeGroupXdmList.html
@@ -607,7 +607,7 @@
 
 										<div class = "row g-2 px-2">
 											<div class = "col-sm-1" align="left" style="margin-top: 15px;">
-												<label>Total : 5</label>
+												<label >Total : <label text="${list.selectOneCount}" ></label></label>
 											</div>
 											<div class = "col-sm-10"></div>
 											<div class = "col-sm-1" align="right" style="margin-bottom: 15px;">
